solution to compile pre-defined xslt template in native-image